# smart-routing-platform

./: .dockerignore  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 42ce285a2f17_initial_schema.py
app/: main.py
app/adapters/: geocoding.py  ports.py
app/adapters/exporters/: __init__.py  schedule_export.py
app/adapters/optimization/: excel_oasis_loader.py  oasis_week_builder.py  or_tools_solver.py  solver_adapter.py  travel_metrics.py
app/adapters/orm/: __init__.py  associations.py  base.py  optimization.py  route.py  service_site.py  technician.py
app/adapters/repositories/: __init__.py  optimization_task.py  route.py  service_request.py  technician.py
app/config/: database.py  settings.py
app/domain/: aggregates.py  commands.py  events.py  exceptions.py  policies.py  services.py  value_objects.py
app/entrypoints/api/: dependencies.py  main.py
app/entrypoints/api/v1/: optimization.py  technicians.py
app/service_layer/: __init__.py  handlers.py  messagebus.py  unit_of_work.py
data/: Routing_pilot_data_input_FINAL.xlsx  Smart routing.docx  geocoding_cache.json
data/output/data_out/: constraints_summary.json  schedule_log.json  schedule_log.xlsx
data/output/demo-2026-03-16/: schedule_log.xlsx
docs/: README.md  constraints.md
docs/architecture/: 01-system-architecture.puml  02-sequence.puml  03-db-er.puml
scripts/: build_geocoding_cache.py  generate_schedule_artifacts.py  seed_from_excel.py
